deploy/apply/java-practice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-practice-deploy
  labels:
    app: java-practice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-practice #need to match with pod labels
  template:
    metadata:
      labels:
        app: java-practice #this is label of a pod which combines to form deployment
    spec:
      containers:
        - name: java-practice
          image: java-practice-2-nov:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
