deploy/apply/java-practice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-practice-srv
spec:
  type: NodePort
  selector:
    app: java-practice #points to pod labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
