deploy/apply/java-practice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-practice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    #- host: java-practice-server.info
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-practice-srv
                port:
                  number: 8080
